@@ -4,6 +4,12 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2017-06-25
+
+  - Fixed a minor bug in the tolerance inference code that wouldn't accept a
+    posting with a missing number only, e.g. Assets:Checking  USD @ 1.32 CAD.
+
+
 2017-06-22
 
   - Added --numberify option to bean-query, which for CSV output will remove the
